# ATC-LLM-Interface

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  REUSE.toml  config.ini  pyproject.toml
scenarios/01_minimal_ali_example/: atco-policy.json  bs_scenario.scn
src/ali/: __init__.py  ali.py  py.typed
src/ali/alignment/: __init__.py  filtering.py  llm.py  policy.py  sorting.py  utils.py
src/ali/experiments/: __init__.py
src/ali/experiments/filtering/: __init__.py  dataset.jsonl  dataset.py  run.py
src/ali/experiments/sorting/: __init__.py  dataset.jsonl  dataset.py  run.py
src/ali/solver/: __init__.py  command.py  resolution.py
src/ali/ui/: __init__.py  app.py  logger.py
tests/: bs_scenario.scn  test_0_ollama_api.py  test_1_ali.py  test_2_experiments.py  test_3_demo.py
